--- a/resources/css/fields/SvgIconsFieldType.css
+++ b/resources/css/fields/SvgIconsFieldType.css
@@ -63,11 +63,19 @@
 .svgicons__select .selectize-dropdown-content {
   max-height: 380px;
 }
-[data-value^=svgicons-] .svgicons__si__i {
+[data-value*=svgicons-] .svgicons__si__i {
   height: 24px !important;
   width: 24px !important;
 }
-[data-value^=svgicons-] .svgicons__i__w__i {
+[data-value*=svgicons-] .svgicons__si__i svg {
+  width: 100%;
+  height: 100%;
+}
+[data-value*=svgicons-] .svgicons__i__w__i {
   height: 32px !important;
   width: 32px !important;
+}
+[data-value*=svgicons-] .svgicons__i__w__i svg {
+  width: 100%;
+  height: 100%;
 }
